Add html and scss

--- a/index.html
+++ b/index.html
@@ -4,13 +4,120 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>PureCSS Template</title>
+    <title>Katsana Sticker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 
 <body>
-      <div class="logo"></div>
+  <div class="logo">
+  	<div class="circle-container">
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  			<div class="circle"></div>
+  	</div>
+
+  	<div class="title-container">
+  		<p class="title">Katsana</p>
+  		<p class="title-small">Advanced Telematics</p>
+  	</div>
+
+  	<div class="shape-bottom">
+  		<div class="shape-1"></div>
+  		<div class="shape-2"></div>
+  	</div>
+
+  	<div class="marker">
+  		<div class="marker-circle"></div>
+  	</div>
+  </div>
 </body>
 
 </html>
